--- a/itl/ext/forms.css
+++ b/itl/ext/forms.css
@@ -7,7 +7,7 @@
 }
 
 .datatable th {
-    background-color: #4968A1;
+    background-color: #b00020;
     height: 25px;
     border-left: 1px solid #CCC;
     border-top: 1px solid #CCC;
