--- a/itl/ext/addex.css
+++ b/itl/ext/addex.css
@@ -1,4 +1,5 @@
 /*
+Testing
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
@@ -74,7 +75,7 @@ div#body_footer_copy{
     padding-top: 10px;
     font-family:Arial, Helvetica, sans-serif;
     font-size:12px; 
-    color:#C1E1F4;
+    color:#ffffff;
 	margin-bottom:20px;
 
 }
