--- a/itl/ext/consolehome.css
+++ b/itl/ext/consolehome.css
@@ -28,7 +28,7 @@
  left:23%;
  float:right;
  height:40px;
- background:#224889;
+ background:#b00020;
 }
 
 
@@ -50,7 +50,7 @@
 #accounttile{
 	font-size: 13px;
     color: #FFF;
-    background:#4968A1;
+    background:#b00020;
     margin: 0;
     padding: 8px;
 	font-family:Tahoma, Geneva, sans-serif;
@@ -113,7 +113,7 @@ margin-left:15px;
  font-size:12px;
  font-weight:bold;
  color:#FFF;
- background:#4968A1;
+ background:#b00020;
  width:20%;
  position:fixed;
  z-index:3;
@@ -153,7 +153,7 @@ margin-left:15px;
 
 #header_parent_panels{
    width:100%;	
-   background:#4968A1; 
+   background:#b00020; 
    height:40px;
 }
 
