--- a/itl/ext/addex.css
+++ b/itl/ext/addex.css
@@ -30,7 +30,7 @@ time, mark, audio, video {
 body{ background:#FCFCFC;}
 
 input,textarea,select {outline:none !important;}
-html { height:100%; width:100%; background: #185E87}
+html { height:100%; width:100%;}
 
 div#body_container{ 
     width:100%; 
@@ -47,7 +47,7 @@ div#body_footer{
     width:100%; 
     max-width:100%;
     height: auto;
-    background: #185E87;
+    background: #b00020;
 }
 
 div#body_footer_copy{
@@ -61,7 +61,7 @@ div#body_footer{
     width:100%; 
     max-width:100%;
     height: auto;
-    background: #185E87;
+    background: #b00020;
 }
 
 #table_id{
@@ -175,7 +175,7 @@ div#body_footer_copy{
    font-family:Arial, Helvetica, sans-serif;
    font-size:16px;
    font-weight:bold;
-   color:  #185E87;
+   color:  #b00020;
    margin-bottom:30px;
  }
  
